# autoworks

./: .gitignore  GPT01.md  README.md  planbyGPT02.md  planthink01.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
config/: anchor_profile.json  answer_engine.json  execution_safety.json  local_real_click_test.example.json  parse_orchestrator.json  perception_indexer.json  secrets.example.json  target_profile.json  user_profile.example.json  vision_model.json
docs/: api-contracts.md  architecture.md  changelog.md  frozen-modules.md  module-boundaries.md
docs/agent-prompts/: architect-agent.md  builder-agent.md  reviewer-agent.md
docs/pr-notes/: action-executor-real-click-mvp.md
knowledge_base/: answer_notes.example.json
modules/action_executor/: __init__.py  action_executor.py  capture_after_click.py  human_simulator.py  local_real_click_runner.py  mouse_keyboard.py  os_click_backend.py  preview_adapter.py  preview_store.py  real_click_guard.py  safety_guard.py  schema.py  selection_verifier.py
modules/action_plan/: __init__.py  action_plan_builder.py  action_plan_store.py  action_plan_validator.py  schema.py
modules/answer_engine/: __init__.py  answer_context_loader.py  answer_engine.py  answer_validator.py  decision_store.py  evidence_matcher.py  input_loader.py  ollama_answer_client.py  panel.py  profile_llm_strategy.py  question_classifier.py  schema.py  user_profile_loader.py
modules/dashboard/: __init__.py  (+1 more)
task_contexts/: registry.json
tests/: test_autoworks_runner.py
tools/: README_local_real_click_test.md  local_html_click_test.html
(+175 files in other folders)
